--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "Code Streak Tracker",
   "description": "keeps track of your daily coding activity, showing your streak and motivating you to keep it going with milestones and reminders.",
   "version": "0.0.1",
+  "publisher": "GANIDU2413",
   "engines": {
     "vscode": "^1.93.0"
   },
