--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "code-streak-tracker",
-  "displayName": "Code Streak Tracker",
+  "displayName": "Ninja Streak Tracker",
   "description": "keeps track of your daily coding activity, showing your streak and motivating you to keep it going with milestones and reminders.",
   "version": "0.0.1",
   "publisher": "GANIDU2413",
