--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "code-streak-tracker",
   "displayName": "Ninja Streak Tracker",
   "description": "keeps track of your daily coding activity, showing your streak and motivating you to keep it going with milestones and reminders.",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "publisher": "GANIDU2413",
+  "icon": "images/icon.png",
   "engines": {
     "vscode": "^1.93.0"
   },
